- SCIPmultiplyBySumExprSum(), SCIPpowerExprSum()
- SCIPsetParam()

### Command line interface

- Added optional parameter -i when calling SCIP in AMPL-mode (-AMPL parameter).
  If -i is specified, a SCIP shell is started where normally SCIPsolve() would be called.

### Interfaces to external software

- Added interface to Lapack (used for solving nonlinear problems).

### Changed parameters

- Shrunk range of parameter "propagating/symmetry/sstleaderrule" from [0,3] to [0,2], removed "MAXCONFLICTS"-option.

### New parameters

- expr/pow/expandmaxexponent to specify limit on exponent when to expand power of sum
- expr/pow/distribfracexponent to enable expanding power of products with fractional exponents
- expr/product/expandalways to enable expanding any product with sums as factor (that is, also when more than two factors)

### Data structures

Deleted files
-------------

- deleted the now unused files: tpi_none.h, tpi_openmp.h, tpi_tnycthrd.h, type_tpi_none.h, type_tpi_openmp.h, type_tpi_tnycthrd.h

Unit tests
----------

Testing
-------

Build system
------------

### Cmake

- New flag -DLAPACK=on for linking with Lapack (must be available in the system)

### Makefile

- New flag LAPACK for linking with Lapack (must be available in the system)

Fixed bugs
----------

Miscellaneous
-------------

- The TPI has been changed to become mostly independent from the actual parallel interface during compile time.
  For this, the locks and conditions are now pointers to abstract structs.

Known bugs
----------

@page RN80 Release notes for SCIP 8.0

@section RN000 SCIP 8.0.1
*************************
Features
--------

- clique lifting in cons_setppc (parameter enablecliquelifting) is only disabled if it has been applied
- avoid warning if Mosek has reached/exceeded the objective limit
- improved curvature check for quadratic expressions when extended formulations are disabled

Performance improvements
------------------------
Examples and applications